--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,9 @@ textarea{
   resize: none;
   color: #000000;
   border-left: 1px solid black;
+  border-right: 1px solid black;
   padding: 10px;
+  width: 100%;
 }
 
 .jumbotron {
@@ -58,14 +60,10 @@ textarea{
 }
 
 .saveBtn {
-  border-left: 1px solid black;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  background-color: #06AED5;
-  color: white;
+  border: 1px solid black;
+  background-color:pink;
+  color: black;
+  padding: 10px 30px 10px 30px;
+  width: 100%;
 }
 
-.saveBtn i:hover {
-  font-size: 20px;
-  transition: all .3s ease-in-out;
-}
