--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,11 @@ body {
   line-height: 1;
 }
 
+h1{
+  color: pink;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
 textarea{
   background: transparent;
   border: none;
